<resources>
  <string name="app_name">Hipasar</string>
  <string name="cd_kakao_talk_logo">Kakao Talk Logo</string>
  <string name="cd_google_logo">Google Logo</string>
  <string name="cd_product_image">Gambar produk</string>
  <string name="cd_increase_button">Tombol Tambah</string>
  <string name="cd_decrease_button">Tombol Kurang</string>
  <string name="cd_cart_image">Keranjang</string>
  <string name="cd_checked">Checked</string>
  <string name="cd_close_image">Tombol Tutup</string>
  <string name="cd_arrow_forward">Berikutnya</string>
  <string name="cd_banner_image">Gambar Banner</string>
  <string name="cd_remove_button">Hapus</string>
  <string name="cd_chat_image">Pesan</string>
  <string name="cd_hipasar_logo">Hipasar Logo</string>
  <string name="cd_search_icon">Ikon Pencarian</string>
  <string name="cd_delete_button">Tombol Hapus</string>
  <string name="str_template_price">Rp%s</string>
  <string name="str_template_order_product">Memesan %d produk</string>
  <string name="str_template_order_amount">%d x</string>
  <string name="str_template_order_code">#%s</string>
  <string name="str_template_price_with_product">Total Harga (%d produk)</string>
  <string name="str_template_tax_percentage">Pajak (%d\%%)</string>
  <string name="str_template_weight">%d g</string>
  <string name="str_template_weight_per">/%d g</string>
  <string name="str_template_min_order">Minimal %d unit</string>
  <string name="str_template_order_toolbar">%s Order</string>
  <string name="str_template_verification_code">Kami telah mengirimkan kode verifikasi melalui nomor WhatsApp: <b>%s</b></string>
  <string name="str_template_allow_resend_message">Kamu bisa meminta ulang kode dalam: %s</string>
  <string name="notification_default_id">hipasar-notification</string>
  <string name="notification_default_name">Hipasar Notification</string>
  <string name="notification_default_title">Notifikasi dari Hipasar</string>
  <string name="notification_default_body">Dari sistem Hipasar</string>
  <string name="str_status_all">SEMUA</string>
  <string name="str_status_pending">PENDING</string>
  <string name="str_status_unknown">TIDAK DIKETAHUI</string>
  <string name="str_status_waiting">MENUNGGU</string>
  <string name="str_status_on_process">DALAM PROSES</string>
  <string name="str_status_on_delivery">SEDANG DIKIRIM</string>
  <string name="str_status_arrived">TIBA</string>
  <string name="str_status_finished">SELESAI</string>
  <string name="str_status_admin_cancel">PERMINTAAN PEMBATALAN</string>
  <string name="str_status_cancelled">DIBATALKAN</string>
  <string name="str_status_non_cap_all">Semua</string>
  <string name="str_status_non_cap_pending">Pending</string>
  <string name="str_status_non_cap_unknown">Tidak Diketahui</string>
  <string name="str_status_non_cap_waiting">Menunggu</string>
  <string name="str_status_non_cap_on_process">Dalam Proses</string>
  <string name="str_status_non_cap_on_delivery">Sedang Dikirim</string>
  <string name="str_status_non_cap_arrived">Tiba</string>
  <string name="str_status_non_cap_finished">Selesai</string>
  <string name="str_status_non_cap_admin_cancel">Permintaan Pembatalan</string>
  <string name="str_status_non_cap_cancelled">Dibatalkan</string>
  <string name="str_auth_failed">Autentikasi gagal</string>
  <string name="str_auth_success">Autentikasi berhasil</string>
  <string name="str_auth_register_now">Daftar</string>
  <string name="str_auth_has_not_account_question">Tidak memiliki akun?</string>
  <string name="str_auth_has_account_question">Sudah memiliki akun?</string>
  <string name="str_auth_login_here">Masuk disini</string>
  <string name="str_auth_set_password">Atur kata sandi</string>
  <string name="str_auth_set_password_failed">Pengaturan kata sandi gagal</string>
  <string name="str_login_failed">Gagal masuk</string>
  <string name="str_login_kakao_failed">Gagal ketika mencoba login menggunakan metode kakao</string>
  <string name="str_login_option">Atau masuk menggunakan</string>
  <string name="str_logout_question">Apakah kamu yakin ingin keluar?</string>
  <string name="str_error_username">Minimal terdiri dari %d karakter</string>
  <string name="str_error_password">Minimal terdiri dari %d karakter dan terdapat angka</string>
  <string name="str_error_password_confirm">Password harus sama</string>
  <string name="str_error_email">Email tidak valid</string>
  <string name="str_error_name">Minimal terdiri dari %d karakter</string>
  <string name="str_error_phone">Nomor telepon tidak valid</string>
  <string name="str_payment_title_succeed">Pesanan Telah Dibuat</string>
  <string name="str_payment_title_failed">Gagal Membuat Pesanan</string>
  <string name="str_payment_title_canceled">Pesanan Dibatalkan</string>
  <string name="str_payment_description_succeed">Silahkan lakukan pembayaran sesuai dengan metode pembayaran yang dipilih atau tutup halaman ini jika pembayaran telah dilakukan</string>
  <string name="str_payment_description_failed">Silahkan membuat pesanan kembali</string>
  <string name="str_payment_description_canceled">Silahkan membuat pesanan kembali</string>
  <string name="str_guide_set_name">Masukkan nama sebagai identitas</string>
  <string name="str_guide_change_name">Ubah nama untuk identitas</string>
  <string name="str_guide_change_email">Ubah email</string>
  <string name="str_order_date">Tanggal Pemesanan</string>
  <string name="str_order_status">Status Pemesanan</string>
  <string name="str_order_info">Info Pemesanan</string>
  <string name="str_order_product">Produk Pemesanan</string>
  <string name="str_msg_get_order_failed">Gagal ketika memuat pesanan</string>
  <string name="str_msg_order_not_found">Pesanan tidak ditemukan!</string>
  <string name="str_msg_update_order_failed">Gagal ketika mengubah pesanan</string>
  <string name="str_msg_update_order_success">Berhasil mengubah pesanan</string>
  <string name="str_msg_not_authorized">Tidak diizinkan! Masuk terlebih dahulu</string>
  <string name="str_msg_get_profile_failed">Gagal ketika memuat profil</string>
  <string name="str_msg_cart_empty">Keranjang kosong</string>
  <string name="str_msg_get_data_failed">Gagal ketika memuat data</string>
  <string name="str_msg_get_menu_failed">Gagal ketika memuat menu</string>
  <string name="str_msg_order_require_login">Masuk terlebih dahulu untuk melihat pesanan</string>
  <string name="str_msg_no_order_available">Tidak ada pesanan</string>
  <string name="str_msg_update_profile_success">Profil diubah</string>
  <string name="str_msg_no_product_available_on_category">Tidak ada produk tersedia di kategori ini</string>
  <string name="str_msg_not_logged_in">Silahkan masuk terlebih dahulu</string>
  <string name="str_msg_upload_image_failed">Gagal ketika mengunggah gambar</string>
  <string name="str_msg_take_image_not_successful">Gagal mengambil gambar dari perangkat</string>
  <string name="str_msg_auth_cancelled">Proses autentikasi telah dibatalkan</string>
  <string name="str_msg_auth_failed">Autentikasi gagal, apakah anda ingin mengulanginya?</string>
  <string name="str_msg_verify_here">Klik disini, jika email sudah diverifikasi di perangkat lain</string>
  <string name="str_msg_update_email_failed">Gagal mengubah email</string>
  <string name="str_msg_verify_email_title">Menunggu konfirmasi email</string>
  <string name="str_msg_verify_email_body">kami telah mengirim konfirmasi link ke email, klik link untuk melanjutkan proses registrasi</string>
  <string name="str_msg_change_email_cancel_question">Apakah kamu ingin membatalkan proses pengubahan email ini?</string>
  <string name="str_msg_get_address_failed">Gagal ketika memuat alamat</string>
  <string name="str_msg_get_address_empty">Alamat kosong</string>
  <string name="str_msg_update_primary_address_successful">Alamat utama telah diubah</string>
  <string name="str_msg_update_primary_address_failed">Gagal ketika mengubah alamat utama</string>
  <string name="str_msg_remove_address_successful">Alamat telah dihapus</string>
  <string name="str_msg_remove_address_failed">Gagal ketika menghapus alamat</string>
  <string name="str_msg_process_checkout_failed">Gagal ketika memproses checkout</string>
  <string name="str_msg_modify_address_failed">Gagal ketika mengubah alamat</string>
  <string name="str_msg_cart_authorization_required">Kami memerlukan otorisasi sebelum melanjutkan proses. Apakah kamu ingin masuk terlebih dahulu?</string>
  <string name="str_msg_address_not_selected">Mohon untuk memilih alamat pengiriman sebelum melanjutkan ke proses pembayaran</string>
  <string name="str_msg_order_cancel_success">Pesanan dibatalkan</string>
  <string name="str_msg_order_cancel_failed">Gagal ketika membatalkan pesanan</string>
  <string name="str_msg_feedback_empty">Tidak ada ulasan tersedia</string>
  <string name="str_msg_shipping_fee_free">Pengiriman gratis, karena berat pengiriman produk lebih dari 3 Kg</string>
  <string name="str_msg_get_filter_failed">Gagal ketika memuat filter</string>
  <string name="str_msg_cancel_order_failed">Gagal ketika membatalkan pesanan</string>
  <string name="str_msg_confirm_order_failed">Gagal ketika mengkonfirmasi pesanan</string>
  <string name="str_msg_cart_remove_product">Apakah kamu ingin menghapus produk ini dari keranjang?</string>
  <string name="str_msg_payment_method_not_selected">Dimohon untuk memilih metode pembayaran terlebih dahulu, sebelum melakukan pemesanan</string>
  <string name="str_msg_no_promo_available">Tidak ada promo tersedia</string>
  <string name="str_msg_accept_terms">Saya menerima syarat dan ketentuan</string>
  <string name="str_msg_email_verification_failed">Verifikasi Email Gagal</string>
  <string name="str_msg_input_email">Masukkan alamat email untuk mengubah kata sandi</string>
  <string name="str_msg_input_e_wallet_phone">Masukkan nomor telepon yang tersambung dengan E-Wallet yang akan digunakan</string>
  <string name="str_msg_phone_input">Mohon periksa kembali nomor telepon yang anda masukkan</string>
  <string name="str_msg_cancel_payment">Apakah anda yakin ingin membatalkan proses pembayaran?</string>
  <string name="str_msg_input_v_a_sender">Masukkan nama pengirim uang</string>
  <string name="str_msg_delivery_time_not_selected">Mohon untuk memilih waktu pengiriman terlebih dahulu</string>
  <string name="str_msg_cod_coming_soon">Metode pembayaran COD belum tersedia untuk saat ini</string>
  <string name="str_msg_invalid_input">Periksa kembali apakah ada kolom yang belum terisi</string>
  <string name="str_msg_agreement_required">Kami memerlukan persetujuan anda sebelum memulai menggunakan layanan kami</string>
  <string name="str_msg_delivery_date_not_selected">Mohon untuk memilih tanggal pengiriman terlebih dahulu</string>
  <string name="str_msg_cancel_auth">Apakah anda ingin membatalkan proses autentikasi?</string>
  <string name="str_msg_stock_not_enough">Stok yang kami miliki tidak mencukupi untuk memenuhi kebutuhan anda</string>
  <string name="str_msg_add_cart_product_success">Produk ditambahkan ke keranjang</string>
  <string name="str_msg_add_cart_product_failed">Gagal menambahkan produk ke keranjang</string>
  <string name="str_msg_remove_cart_product_success">Produk dihapus dari keranjang</string>
  <string name="str_msg_remove_cart_product_failed">Gagal menghapus produk dari keranjang</string>
  <string name="str_msg_update_cart_product_failed">Gagal mengubah kuantias produk di keranjang</string>
  <string name="str_password">Kata sandi</string>
  <string name="str_login">Masuk</string>
  <string name="str_email">Email</string>
  <string name="str_name">Nama</string>
  <string name="str_confirm_password">Konfirmasi Password</string>
  <string name="str_register">Daftar</string>
  <string name="str_set">Atur</string>
  <string name="str_skip_for_now">Lewati</string>
  <string name="str_phone">Nomor Telepon</string>
  <string name="str_forgot_password">Lupa Kata Sandi</string>
  <string name="str_phone_input_prefix">+62</string>
</resources>