<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <import type="com.uberando.hipasar.util.Constants" />
    <variable
      name="viewModel"
      type="com.uberando.hipasar.ui.auth.register.RegisterViewModel" />
  </data>
  <androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:id="@+id/logo_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
          android:layout_width="120dp"
          android:layout_height="120dp"
          android:src="@drawable/hipasar_logo"
          android:contentDescription="@string/cd_hipasar_logo"/>
<!--        <TextView-->
<!--          android:layout_width="wrap_content"-->
<!--          android:layout_height="wrap_content"-->
<!--          android:text="@string/app_name"-->
<!--          android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2" />-->
      </LinearLayout>
      <LinearLayout
        android:id="@+id/field_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/logo_container">
        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_name"
          app:endIconMode="clear_text"
          app:errorEnabled="true"
          app:setErrorRule_source="@{viewModel.name}"
          app:setErrorRule_target='@{Constants.INPUT_TARGET_NAME}'>
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:imeOptions="actionNext"
            android:text="@={viewModel.name}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_phone"
          app:endIconMode="clear_text"
          app:errorEnabled="true"
          app:prefixText="@string/str_phone_input_prefix"
          app:setErrorRule_source="@{viewModel.phone}"
          app:setErrorRule_target='@{Constants.INPUT_TARGET_PHONE}'>
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:imeOptions="actionNext"
            android:text="@={viewModel.phone}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_email"
          app:endIconMode="clear_text"
          app:errorEnabled="true"
          app:setErrorRule_source="@{viewModel.email}"
          app:setErrorRule_target='@{Constants.INPUT_TARGET_EMAIL}'>
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext"
            android:text="@={viewModel.email}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_password"
          app:endIconMode="password_toggle"
          app:errorEnabled="true"
          app:setErrorRule_source="@{viewModel.password}"
          app:setErrorRule_target='@{Constants.INPUT_TARGET_PASSWORD}'>
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionNext"
            android:text="@={viewModel.password}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
          style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:hint="@string/str_confirm_password"
          app:endIconMode="password_toggle"
          app:errorEnabled="true"
          app:setErrorRule_realPassword="@{viewModel.password}"
          app:setErrorRule_source="@{viewModel.passwordConfirm}"
          app:setErrorRule_target='@{Constants.INPUT_TARGET_PASSWORD_CONFIRM}'>
          <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:text="@={viewModel.passwordConfirm}"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_gravity="center_horizontal">
          <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="@={viewModel.termsChecked}"/>
          <Button
            style="@style/App.Widget.Button.Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{() -> viewModel.onTermsButtonClick()}"
            android:text="@string/str_msg_accept_terms" />
        </LinearLayout>
        <Button
          style="@style/App.Widget.Button.Filled.Colored"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{() -> viewModel.onRegisterButtonClick()}"
          android:text="@string/str_register" />
        <Space
          android:layout_width="match_parent"
          android:layout_height="8dp" />
        <Button
          style="@style/App.Widget.Button.Outlined.Colored"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:onClick="@{() -> viewModel.onLoginButtonClick()}"
          android:text="@string/str_login" />
      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.core.widget.NestedScrollView>
</layout>