<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto">
  <data>
    <import type="com.uberando.hipasar.util.Constants" />
    <variable
      name="viewModel"
      type="com.uberando.hipasar.ui.auth.set.AuthSetPasswordViewModel" />
  </data>
  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/start_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_begin="16dp" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/end_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_end="16dp" />
    <androidx.constraintlayout.widget.Guideline
      android:id="@+id/top_guideline"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="horizontal"
      app:layout_constraintGuide_begin="16dp" />
    <TextView
      android:id="@+id/heading_text"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/str_auth_set_password"
      android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
      app:layout_constraintStart_toStartOf="@id/start_guideline"
      app:layout_constraintTop_toTopOf="@id/top_guideline" />
    <LinearLayout
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginTop="40dp"
      app:layout_constraintStart_toStartOf="@id/start_guideline"
      app:layout_constraintEnd_toEndOf="@id/end_guideline"
      app:layout_constraintTop_toBottomOf="@id/heading_text">
      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:setErrorRule_source="@{viewModel.password}"
        app:setErrorRule_target='@{Constants.INPUT_TARGET_PASSWORD}'>
        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:imeOptions="actionNext"
          android:text="@={viewModel.password}"/>
      </com.google.android.material.textfield.TextInputLayout>
      <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />
      <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_confirm_password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:setErrorRule_realPassword="@{viewModel.password}"
        app:setErrorRule_source="@{viewModel.passwordConfirm}"
        app:setErrorRule_target='@{Constants.INPUT_TARGET_PASSWORD_CONFIRM}'>
        <com.google.android.material.textfield.TextInputEditText
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="textPassword"
          android:imeOptions="actionDone"
          android:text="@={viewModel.passwordConfirm}"/>
      </com.google.android.material.textfield.TextInputLayout>
      <Space
        android:layout_width="wrap_content"
        android:layout_height="24dp" />
      <Button
        style="@style/App.Widget.Button.Filled.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewModel.onSetButtonClick()}"
        android:text="@string/str_set" />
      <Space
        android:layout_width="wrap_content"
        android:layout_height="8dp" />
      <Button
        style="@style/App.Widget.Button.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="@{() -> viewModel.onSkipButtonClick()}"
        android:text="@string/str_skip_for_now" />
    </LinearLayout>
  </androidx.constraintlayout.widget.ConstraintLayout>
</layout>